Bugfix: Making the additional track legend look blurry when running Simulated Annealing.

--- a/src/styles/_genomeView.scss
+++ b/src/styles/_genomeView.scss
@@ -66,6 +66,10 @@ div.genome-view-container {
       border-radius: 20px;
       margin-top: 10px;
     }
+
+    &.blur-view {
+      filter: blur(4px);
+    }
   }
 }
 
